--- a/kml/package.json
+++ b/kml/package.json
@@ -20,6 +20,7 @@
     "jq": "^1.7.2",
     "lodash": "^4.17.10",
     "minimist": "^1.2.0",
+    "node-jq": "^1.3.0",
     "out": "^1.0.0",
     "restify": "^7.2.1",
     "rw": "^1.3.3",
