--- a/kml/package.json
+++ b/kml/package.json
@@ -12,12 +12,14 @@
     "@turf/flatten": "^5.1.5",
     "@turf/intersect": "^6.1.3",
     "@turf/turf": "^5.1.6",
+    "NDDB": "^1.17.0",
     "async": "^2.6.1",
     "feature-filter-geojson": "^1.0.0",
     "geojson-clip-polygon": "^1.0.3",
     "geojson-filter": "^0.1.4",
     "h3-js": "^3.0.1",
     "jq": "^1.7.2",
+    "level": "^4.0.0",
     "lodash": "^4.17.10",
     "minimist": "^1.2.0",
     "node-jq": "^1.3.0",
