--- a/kml/package.json
+++ b/kml/package.json
@@ -18,6 +18,7 @@
     "geojson-clip-polygon": "^1.0.3",
     "geojson-filter": "^0.1.4",
     "h3-js": "^3.0.1",
+    "ioredis": "^3.2.2",
     "jq": "^1.7.2",
     "level": "^4.0.0",
     "lodash": "^4.17.10",
@@ -26,6 +27,7 @@
     "out": "^1.0.0",
     "restify": "^7.2.1",
     "rw": "^1.3.3",
+    "slug": "^0.9.1",
     "topojson": "^3.0.2"
   }
 }
