--- a/kml/package.json
+++ b/kml/package.json
@@ -15,9 +15,11 @@
     "NDDB": "^1.17.0",
     "async": "^2.6.1",
     "feature-filter-geojson": "^1.0.0",
+    "fix-utf8": "^1.0.4",
     "geojson-clip-polygon": "^1.0.3",
     "geojson-filter": "^0.1.4",
     "h3-js": "^3.0.1",
+    "iconv-lite": "^0.4.23",
     "ioredis": "^3.2.2",
     "jq": "^1.7.2",
     "level": "^4.0.0",
