--- a/kml/package.json
+++ b/kml/package.json
@@ -25,6 +25,7 @@
     "level": "^4.0.0",
     "lodash": "^4.17.10",
     "minimist": "^1.2.0",
+    "mongojs": "^2.6.0",
     "node-jq": "^1.3.0",
     "out": "^1.0.0",
     "restify": "^7.2.1",
